--- a/index.html
+++ b/index.html
@@ -237,10 +237,4 @@
                     <div class="option" data-char="spongebob">分享给所有人</div>
                     <div class="option" data-char="shinchan">模仿拍同款</div>
                     <div class="option" data-char="capybara">偷偷笑</div>
-                    <div class="option" data-char="gargamel">觉得无聊</div>
-                </div>
-            </div>
-            <!-- 题20 -->
-            <div class="question" data-q="20">
-                <h2 class="question-title">20. 选座右铭会？</h2>
-                <div class="options">
+                    <div class="option" data-char="gargamel">觉得无聊
